web-infras/parser/tests/fixtures/esprima/ES6/yield/invalid-yield-strict-arrow-parameter-default/output.txt
[SyntaxError]: 'yield' is only allowed within generator functions. (1,20)
1|"use strict"; (x = yield) => {}
 |                  ^
[SyntaxError]: unexpect keyword in strict mode (1,20)
1|"use strict"; (x = yield) => {}
 |                  ^
[SyntaxError]: unexpect keyword in strict mode (1,20)
1|"use strict"; (x = yield) => {}
 |                  ^
